--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- SEO -->
-    <title>Meine 1. Website</title>
+    <title>Learn HTML5 and CSS</title>
     <meta name="description" content="" />
     <meta name="robots" content="index, follow" />
 
