--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
 
         <!-- Sag was über Dich -->
         <div class="bio">
-          <h1>Learn HTML5 and CSS in 30 days</h1>
+          <h1>Learn HTML5 and CSS in 30 days for free</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Voluptatum labore nemo aliquam nesciunt perspiciatis nobis
-            unde voluptas provident enim, doloribus ipsam laboriosam
-            quae dolore maiores, sapiente dolorum? Optio, non quos.
+            10 minutes every day for 30 days: with this course you will learn to build your first website and the essentials of HTML5 and CSS. For free.
+            Perfect also for complete beginners.
           </p>
         </div>
 
