--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <div class="bio">
           <h1>Learn HTML5 and CSS in 30 days for free</h1>
           <p>
-            10 minutes every day for 30 days: with this course you will learn to build your first website and the essentials of HTML5 and CSS. For free.
-            Perfect also for complete beginners.
+            10 minutes every day for 30 days: with this course you will learn to build your first website and the essentials of HTML5 and CSS. <br> For free.
+            <br>Perfect also for complete beginners.
           </p>
         </div>
 
