--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="network">
           <ul>
             <!-- Twitter icon reference  -->
-            <li>
+            <!-- <li>
               <a
                 class="icon-twitter"
                 href="https://www.twitter.com/ha5inho"
@@ -74,10 +74,10 @@
                   ></path>
                 </svg>
               </a>
-            </li>
+            </li> -->
             <!-- Instagram icon reference  -->
             <li>
-              <a class="icon-instagram" href="#" target="_blank">
+              <a class="icon-instagram" href="https://www.instagram.com/la_berlinese/" target="_blank">
                 <svg class="svg-icon" viewBox="0 0 20 20">
                   <path
                     fill="none"
@@ -87,7 +87,7 @@
               </a>
             </li>
             <!-- Facebook icon reference  -->
-            <li>
+            <!-- <li>
               <a class="icon-facebook" href="#">
                 <svg class="svg-icon" viewBox="0 0 20 20">
                   <path
@@ -96,10 +96,10 @@
                   ></path>
                 </svg>
               </a>
-            </li>
+            </li> -->
 
             <!-- YouTube icon reference  -->
-            <li>
+            <!-- <li>
               <a class="icon-youtube" href="#">
                 <svg class="svg-icon" viewBox="0 0 20 20">
                   <path
@@ -108,11 +108,11 @@
                   ></path>
                 </svg>
               </a>
-            </li>
+            </li> -->
 
             <!-- GitHub icon reference  -->
             <li>
-              <a class="icon-github" href="#">
+              <a class="icon-github" href="https://github.com/micold">
                 <svg class="svg-icon" viewBox="0 0 20 20">
                   <g
                     transform="matrix(0.613892,0,0,0.629428,9.99906,20.0808)"
@@ -127,7 +127,7 @@
             </li>
 
             <!-- email icon reference one -->
-            <li>
+            <!-- <li>
               <a class="icon-email" href="#">
                 <svg class="svg-icon" viewBox="0 0 20 20">
                   <path
@@ -135,7 +135,7 @@
                   ></path>
                 </svg>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
